--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,9 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('./fonts/proxima-nova/ProximaNovaFont.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 @layer base {
-    html {
-      font-family: "Helvetica", system-ui, sans-serif;
-    }
+  html {
+    font-family: 'Proxima Nova', 'Helvetica', system-ui, sans-serif;
   }
+}
